--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Login!</title>
-    <!--Load Bootstrap-->
+    <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" charset="utf-8">
     <!--Styles-->
     <link rel="stylesheet" href="css/style.css" charset="utf-8">
@@ -16,22 +16,25 @@
             <hr width="100%">
           </header>
           <article>
-            <form id="form" method="post">
+            <form name="form" method="post" action="">
               <div class="form-group">
-                <input id="user" class="form-control" type="text" name="user" placeholder="Username">
+                <input class="form-control" type="text" name="user" placeholder="Username">
               </div>
               <div class="form-group">
-                <input id="pass" class="form-control" type="password" name="pass" placeholder="Password">
+                <input class="form-control" type="password" name="pass" placeholder="Password">
               </div>
               <div class="form-group">
-                <input id="submit" class ="form-control btn btn-primary" type="button" name="submit" value="Login!" onclick="validate();">
+                <input class ="form-control btn btn-primary" type="button" name="submit" value="Login!" onclick="validate();">
               </div>
             </form>
           </article>
       </section>
     </div>
-    <!--JSON data-->
-    <script type="text/javascript" src="data.json"></script>
+    <!--jQuery-->
+    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <!--serializeObject-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.5.0/jquery.serialize-object.min.js"></script>
+    <!--Process-->
     <script type="text/javascript" src="js/process.js"></script>
   </body>
 </html>
