--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="content">
-      <section>
+      <section id="login-panel" class="login-panel">
           <header>
             <h1>Welcome!</h1>
             <hr width="100%">
