Update files schema

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" charset="utf-8">
     <!--Styles-->
-    <link rel="stylesheet" href="css/style.css" charset="utf-8">
+    <link rel="stylesheet" href="assets/css/style.css" charset="utf-8">
   </head>
   <body>
     <div class="container">
@@ -30,39 +30,10 @@
             </form>
           </article>
       </section>
-      <!--Home-->
-      <section id="home">
-          <header>
-            <h1>Home!</h1>
-            <hr>
-          </header>
-          <div class="row">
-            <div class="col-lg-3">
-              <article class="comic-single">
-                <img src="img/comic.jpg" alt=""/>
-              </article>
-            </div>
-            <div class="col-lg-3">
-              <article class="comic-single">
-                <img src="img/comic.jpg" alt=""/>
-              </article>
-            </div>
-            <div class="col-lg-3">
-              <article class="comic-single">
-                <img src="img/comic.jpg" alt=""/>
-              </article>
-            </div>
-            <div class="col-lg-3">
-              <article class="comic-single">
-                <img src="img/comic.jpg" alt=""/>
-              </article>
-            </div>
-          </div>
-      </section>
     </div>
     <!--jQuery-->
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-    <!--Process-->
-    <script type="text/javascript" src="js/process.js"></script>
+    <!--Login-->
+    <script type="text/javascript" src="app/routes/login.js"></script>
   </body>
 </html>
