--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       </section>
     </div>
     <!--jQuery-->
-    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.2.0.js"></script>
     <!--Login-->
     <script type="text/javascript" src="app/routes/login.js"></script>
   </body>
